--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,14 +3,14 @@ SECRET_KEY=your-secret-key-here-change-in-production
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 
-# Database (PostgreSQL)
-# Uncomment and configure if using PostgreSQL instead of SQLite
+# Database (PostgreSQL for Production - Render will provide this)
+# LOCAL: Uses SQLite automatically when DATABASE_URL is not set
+# PRODUCTION: Set DATABASE_URL environment variable on Render
 # DATABASE_URL=postgresql://user:password@localhost:5432/community_feed
-# DB_NAME=community_feed
-# DB_USER=postgres
-# DB_PASSWORD=postgres
-# DB_HOST=localhost
-# DB_PORT=5432
 
 # CORS Settings
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+
+# Render-specific (add these on Render dashboard)
+# RENDER_EXTERNAL_HOSTNAME=your-app.onrender.com
+# PYTHON_VERSION=3.11.0
